new core test ok

--- a/DIMP/tests/test.html
+++ b/DIMP/tests/test.html
@@ -19,23 +19,30 @@
             var sources = [
                 'src/namespace.js',
 
+                'src/protocol/forward.js',
+                'src/protocol/file.js',
+                'src/protocol/files.js',
                 'src/protocol/text.js',
                 'src/protocol/page.js',
-                'src/protocol/file.js',
-                'src/protocol/image.js',
-                'src/protocol/audio.js',
-                'src/protocol/video.js',
+                'src/protocol/money.js',
 
-                'src/protocol/command/command.js',
-                'src/protocol/command/meta.js',
-                'src/protocol/command/profile.js',
-                'src/protocol/command/history.js',
-                'src/protocol/command/group.js',
+                'src/protocol/command.js',
+                'src/protocol/meta.js',
+                'src/protocol/document.js',
+                'src/protocol/history.js',
+                'src/protocol/group.js',
+                'src/protocol/groups.js',
 
-                'src/delegate.js',
-                'src/cache.js',
-                'src/barrack.js',
+                'src/entity.js',
+                'src/user.js',
+                'src/group.js',
                 'src/transceiver.js',
+
+                'src/core/barrack.js',
+                'src/core/packer.js',
+                'src/core/processor.js',
+                'src/core/transceiver.js',
+                'src/core/factories.js',
                 null
             ];
 
