core classes upgraded

--- a/DIMP/tests/test.html
+++ b/DIMP/tests/test.html
@@ -33,10 +33,23 @@
                 'src/protocol/group.js',
                 'src/protocol/groups.js',
 
-                'src/entity.js',
-                'src/user.js',
-                'src/group.js',
-                'src/transceiver.js',
+                'src/dkd/forward.js',
+                'src/dkd/file.js',
+                'src/dkd/files.js',
+                'src/dkd/text.js',
+                'src/dkd/page.js',
+                'src/dkd/money.js',
+
+                'src/dkd/command.js',
+                'src/dkd/meta.js',
+                'src/dkd/document.js',
+                'src/dkd/history.js',
+                'src/dkd/group.js',
+                'src/dkd/groups.js',
+
+                'src/mkm/entity.js',
+                'src/mkm/user.js',
+                'src/mkm/group.js',
 
                 'src/core/barrack.js',
                 'src/core/packer.js',
