upgrade barrack, transceiver
remove 'getOvertGroup';
remove ID/Address factory;
remove message delegates;
remove message factories;
use PNF for avatar;
BroadcastHelper, MetaHelper, DocumentHelper

--- a/DIMP/tests/test.html
+++ b/DIMP/tests/test.html
@@ -30,7 +30,7 @@
                 'src/protocol/money.js',
                 'src/protocol/customized.js',
                 // dkd command protocol
-                'src/protocol/command.js',
+                'src/protocol/commands.js',
                 'src/protocol/groups.js',
                 'src/protocol/receipt.js',
                 // mkm document protocol
@@ -47,18 +47,17 @@
                 'src/dkd/groups.js',
                 'src/dkd/receipt.js',
                 // dkd command factory manager
-                'src/dkd/manager.js',
+                'src/dkd/factory.js',
 
                 // dkd message implementations
                 'src/msg/envelope.js',
-                'src/msg/message.js',
+                'src/msg/base.js',
                 'src/msg/instant.js',
                 'src/msg/secure.js',
                 'src/msg/reliable.js',
 
                 // mkm extensions
-                'src/mkm/address.js',
-                'src/mkm/identifier.js',
+                'src/mkm/helper.js',
                 'src/mkm/meta.js',
                 'src/mkm/document.js',
                 'src/mkm/docs.js',
