relocate plugins to ext

--- a/DIMP/tests/test.html
+++ b/DIMP/tests/test.html
@@ -29,11 +29,10 @@
                 '../../Crypto/tests/format/base58.js',
                 '../../Crypto/tests/format/base64.js',
                 '../../Crypto/tests/crypto_tests.js',
-                '../Crypto/tests/crypto_tests.js',
 
-                '../MingKeMing/tests/mkm_tests.js',
+                '../../MingKeMing/tests/mkm_tests.js',
 
-                '../DaoKeDao/tests/dkd_tests.js',
+                '../../DaoKeDao/tests/dkd_tests.js',
 
                 'tests/core_tests.js',
                 null
